# ImageProcessingLabs

./: README.md
badretdinov_d_f/: CMakeLists.txt
badretdinov_d_f/prj/: CMakeLists.txt
badretdinov_d_f/prj/1Lab1/: 1Lab1.cpp  CMakeLists.txt
badretdinov_d_f/prj/2ColorCorrection1/: CMakeLists.txt
badretdinov_d_f/prj/2ControlWork1/: 2controlWork1.cpp  CMakeLists.txt
badretdinov_d_f/prj/3ColorCorrection2/: colorCorrection2.cpp
badretdinov_d_f/prj/3Lab2/: 3Lab2.cpp  CMakeLists.txt
badretdinov_d_f/prj/4ControlWork1/: CMakeLists.txt  controlWork1.cpp
badretdinov_d_f/prj/5LabWork2/: CMakeLists.txt  LabWork2.cpp
badretdinov_d_f/prj/colorCorrection1/: colorCorrection1.cpp
badretdinov_d_f/prj/colorCorrection2/: CMakeLists.txt  colorCorrection2.cpp
badretdinov_d_f/prj/graph/: CMakeLists.txt  graph.cpp
