cmake_minimum_required(VERSION 3.4)

project(1DrawingGraph)
add_subdirectory(1DrawingGraph)

project(2colorCorrection1)
add_subdirectory(2colorCorrection1)

project(3colorCorrection2)
add_subdirectory(3colorCorrection2)

project(4ControlWork1)
add_subdirectory(4ControlWork1)

project(5LabWork2)
add_subdirectory(5LabWork2)